*** empty log message ***

--- a/rfc/index.html
+++ b/rfc/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <h1>OpenAMQ Requests for Comments</h1>
-<p>Last updated on 2004/12/09 by Pieter Hintjens
+<p>Last updated on 2005/06/05 by Pieter Hintjens
 
 <p>These RFCs are ready for review:
 <ul>
@@ -22,19 +22,9 @@
     <a href="amq_rfc002.txt">Text</a>
 </li><br>
 
-<li>RFC003 - A Fast Dispatcher<br>
+<li>RFC003 - Rapid Message Matching<br>
     <a href="amq_rfc003.htm">HTML</a>
     <a href="amq_rfc003.txt">Text</a>
-</li><br>
-
-<li>RFC004 - The Module System<br>
-    <a href="amq_rfc004.htm">HTML</a>
-    <a href="amq_rfc004.txt">Text</a>
-</li><br>
-
-<li>RFC005 - The Terminal-Driver API<br>
-    <a href="amq_rfc005.htm">HTML</a>
-    <a href="amq_rfc005.txt">Text</a>
 </li><br>
 
 <li>RFC006 - The AMQP/Fast Wire-Level Protocol<br>
@@ -42,29 +32,9 @@
     <a href="amq_rfc006.txt">Text</a>
 </li><br>
 
-<li>RFC008 - AMQ Terminology<br>
-    <a href="amq_rfc008.htm">HTML</a>
-    <a href="amq_rfc008.txt">Text</a>
-</li><br>
-
-<li>RFC010 - Module Classes<br>
-    <a href="amq_rfc010.htm">HTML</a>
-    <a href="amq_rfc010.txt">Text</a>
-</li><br>
-
 <li>RFC011 - AMQP Reply Codes<br>
     <a href="amq_rfc011.htm">HTML</a>
     <a href="amq_rfc011.txt">Text</a>
-</li><br>
-
-<li>RFC012 - AMQP/Fast Semantics for JMS<br>
-    <a href="amq_rfc012.htm">HTML</a>
-    <a href="amq_rfc012.txt">Text</a>
-</li><br>
-
-<li>RFC013 - AMQ URL Syntax<br>
-    <a href="amq_rfc013.htm">HTML</a>
-    <a href="amq_rfc013.txt">Text</a>
 </li><br>
 
 <li>RFC014 - AMQP Agnostic Client Design<br>
@@ -75,19 +45,6 @@
 <li>RFC015 - AMQ Client Component API<br>
     <a href="amq_rfc015.htm">HTML</a>
     <a href="amq_rfc015.txt">Text</a>
-</li><br>
-
-</ul>
-<p>These RFCs are in-progress:
-<ul>
-<li>RFC009 - The AMQP/HTTP Terminal<br>
-    <a href="amq_rfc009.htm">HTML</a>
-    <a href="amq_rfc009.txt">Text</a>
-</li><br>
-
-<li>RFC007 - The AMQP/Fast Terminal<br>
-    <a href="amq_rfc007.htm">HTML</a>
-    <a href="amq_rfc007.txt">Text</a>
 </li><br>
 </ul>
 
